fix: dark mode with class instead of media

--- a/example/src/example.css
+++ b/example/src/example.css
@@ -51,7 +51,3 @@ p {
   padding: 0;
   margin: 1rem 0 0;
 }
-
-:root {
-  color-scheme: dark;
-}
