--- a/src/close/modern.css
+++ b/src/close/modern.css
@@ -24,7 +24,8 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+.dark,
+[data-theme="dark"] {
   .bl-close-button {
     &:hover {
       background-color: rgba(255, 255, 255, 0.075);
