--- a/src/select/modern.css
+++ b/src/select/modern.css
@@ -56,7 +56,8 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+.dark,
+[data-theme="dark"] {
   .bl-select {
     border-color: var(--bl-clr-gray-600);
 
